<resources>
    <string name="app_name">autoclicker</string>
    <string name="enable_autoclicker_service">Enable AutoClicker Service</string>
    <string name="plus">Add</string>
    <string name="minus">Subtract</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="play">play\n</string>
    <string name="pause">pause</string>
    <string name="accessibility_service_label">Auto Clicker Service</string>
    <string name="accessibility_service_description">Service for automated clicking at specified screen locations</string>



</resources>