<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/rounded_background"
    android:padding="8dp"
    android:gravity="center"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="16dp">

    <!-- Plus Button -->
    <ImageButton
        android:id="@+id/btn_plus"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_add_24"
        android:contentDescription="@string/plus"
        android:layout_marginEnd="8dp"/>

    <!-- Minus Button -->
    <ImageButton
        android:id="@+id/btn_minus"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_horizontal_rule_24"
        android:contentDescription="@string/minus"
        android:layout_marginEnd="8dp"/>

    <!-- Edit Button -->
    <ImageButton
        android:id="@+id/btn_edit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_edit_24"
        android:contentDescription="@string/edit"
        android:layout_marginEnd="8dp"/>

    <!-- Save Button -->
    <ImageButton
        android:id="@+id/btn_save"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_save_24"
        android:contentDescription="@string/save"
        android:layout_marginEnd="8dp"/>

    <!-- Play Button -->
    <ImageButton
        android:id="@+id/btn_play"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_play_arrow_24"
        android:contentDescription="@string/play"
        android:layout_marginEnd="8dp"/>

    <!-- Pause Button -->
    <ImageButton
        android:id="@+id/btn_pause"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_pause_24"
        android:contentDescription="@string/pause"/>
</LinearLayout>
